# case-conv

./: Cargo.toml  README.md
benches/: anna-karenina.ru.txt  benches.rs  macbeth.unicode.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: is_ascii.rs  lowercase.rs  uppercase.rs
src/: conversions2.rs  lib.rs
tests/: fuzz.rs
