[package]
name = "case-conv"
version = "0.1.2"
edition = "2021"
author = "Conrad Ludgate <conradludgate@gmail.com"
license = "MIT"
description = "Faster case conversion crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false
